# date_format_machine

./: .bandit.yaml  .gitignore  .prospector.yaml  Pipfile  README.md  dfm.py  dfm_formats.yaml  pypi_deploy  pypi_prep  pypi_purge_cache  pyproject.toml  setup.py
date_format_machine/: __init__.py  dfm.py
date_format_machine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/: test_dfm.py
tests/: test_dfm.py
