[tool.poetry]
name = "date_format_machine"
version = "0.9"
description = "Tool for manipulating date strings"
authors = ["Ryan <citizen.townshend@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
click-log = "^0.4.0"
pendulum = "^2.1.2"
tabulate = "^0.8.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
prospector = {version = "^1.7.7", extras = ["with_everything"]}
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dfm = "date_format_machine.dfm:cli"
date_format_machine = "date_format_machine.dfm:cli"
